replaced few more usages of URL ctor in classes that were missing from main